[gd_scene load_steps=2 format=3 uid="uid://3q07t5q38dgu"]

[ext_resource type="Script" path="res://main_menu.gd" id="1_tndwi"]

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tndwi")

[node name="MainMenuPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuPanel"]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 32.0
offset_right = 162.0
grow_vertical = 2
theme_override_constants/separation = 16
alignment = 1

[node name="NewGameButton" type="Button" parent="MainMenuPanel/VBoxContainer"]
layout_mode = 2
focus_neighbor_bottom = NodePath("../LoadGameButton")
focus_next = NodePath("../LoadGameButton")
focus_previous = NodePath("../QuitGameButton")
text = "New Game"

[node name="LoadGameButton" type="Button" parent="MainMenuPanel/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../NewGameButton")
focus_neighbor_bottom = NodePath("../QuitGameButton")
focus_next = NodePath("../QuitGameButton")
focus_previous = NodePath("../NewGameButton")
text = "Load Game"

[node name="LicenseButton" type="Button" parent="MainMenuPanel/VBoxContainer"]
layout_mode = 2
text = "Third-party Licenses"

[node name="QuitGameButton" type="Button" parent="MainMenuPanel/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../LoadGameButton")
focus_next = NodePath("../NewGameButton")
focus_previous = NodePath("../LoadGameButton")
text = "Quit to Desktop"

[node name="ScrollContainer" type="ScrollContainer" parent="MainMenuPanel"]
custom_minimum_size = Vector2(900, 0)
layout_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenuPanel/ScrollContainer"]
layout_mode = 2
theme_override_constants/separation = 18

[connection signal="pressed" from="MainMenuPanel/VBoxContainer/NewGameButton" to="." method="_on_new_game_button_pressed"]
[connection signal="pressed" from="MainMenuPanel/VBoxContainer/LoadGameButton" to="." method="_on_load_game_button_pressed"]
[connection signal="pressed" from="MainMenuPanel/VBoxContainer/LicenseButton" to="." method="_on_license_button_pressed"]
[connection signal="pressed" from="MainMenuPanel/VBoxContainer/QuitGameButton" to="." method="_on_quit_game_button_pressed"]
